feat: get current session by supervisor id route added
